--- a/mainLayout.ui
+++ b/mainLayout.ui
@@ -73,6 +73,7 @@
      <string>File</string>
     </property>
     <addaction name="actionOpen"/>
+    <addaction name="actionExport_to_csv"/>
     <addaction name="actionClear"/>
     <addaction name="actionExit"/>
    </widget>
@@ -104,6 +105,11 @@
   <action name="actionAbout">
    <property name="text">
     <string>about</string>
+   </property>
+  </action>
+  <action name="actionExport_to_csv">
+   <property name="text">
+    <string>Export_to_csv</string>
    </property>
   </action>
  </widget>
