--- a/mainLayout.ui
+++ b/mainLayout.ui
@@ -65,15 +65,20 @@
      <x>0</x>
      <y>0</y>
      <width>857</width>
-     <height>20</height>
+     <height>27</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionOpen"/>
+    <addaction name="actionOpen_csv"/>
+    <addaction name="actionDrawPlotsFromCsv"/>
+    <addaction name="separator"/>
+    <addaction name="actionOpen_mdsplus"/>
+    <addaction name="actionDrawPlotsFromMdsplus"/>
     <addaction name="actionExport_to_csv"/>
+    <addaction name="separator"/>
     <addaction name="actionClear"/>
     <addaction name="actionExit"/>
    </widget>
@@ -87,14 +92,14 @@
    <addaction name="menu"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionOpen">
+  <action name="actionOpen_csv">
    <property name="text">
-    <string>Open</string>
+    <string>Open_csv</string>
    </property>
   </action>
   <action name="actionClear">
    <property name="text">
-    <string>Clear</string>
+    <string>ClearPlots</string>
    </property>
   </action>
   <action name="actionExit">
@@ -110,6 +115,21 @@
   <action name="actionExport_to_csv">
    <property name="text">
     <string>Export_to_csv</string>
+   </property>
+  </action>
+  <action name="actionDrawPlotsFromCsv">
+   <property name="text">
+    <string>DrawPlotsFromCsv</string>
+   </property>
+  </action>
+  <action name="actionOpen_mdsplus">
+   <property name="text">
+    <string>Open_mdsplus</string>
+   </property>
+  </action>
+  <action name="actionDrawPlotsFromMdsplus">
+   <property name="text">
+    <string>DrawPlotsFromMdsplus</string>
    </property>
   </action>
  </widget>
