--- a/spectrogramLayout.ui
+++ b/spectrogramLayout.ui
@@ -46,12 +46,6 @@
           <height>20</height>
          </size>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>50</width>
-          <height>20</height>
-         </size>
-        </property>
         <property name="text">
          <string>draw</string>
         </property>
@@ -241,29 +235,10 @@
         </property>
        </widget>
       </item>
-      <item>
-       <widget class="QPushButton" name="redrawSpectrogramUI">
-        <property name="minimumSize">
-         <size>
-          <width>50</width>
-          <height>20</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>50</width>
-          <height>20</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>spectr</string>
-        </property>
-       </widget>
-      </item>
      </layout>
     </item>
     <item>
-     <widget class="PlotWidget" name="plot">
+     <widget class="GraphicsLayoutWidget" name="spectrogram_UI">
       <property name="baseSize">
        <size>
         <width>0</width>
@@ -355,9 +330,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>PlotWidget</class>
+   <class>GraphicsLayoutWidget</class>
    <extends>QGraphicsView</extends>
-   <header>pyqtgraph</header>
+   <header location="global">pyqtgraph</header>
   </customwidget>
  </customwidgets>
  <resources/>
