--- a/spectrogramLayout.ui
+++ b/spectrogramLayout.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>992</width>
-    <height>667</height>
+    <height>587</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -15,6 +15,18 @@
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>400</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>587</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -39,8 +51,14 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QPushButton" name="redraw">
+       <widget class="QPushButton" name="redrawSpectrogramBtn">
         <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="maximumSize">
          <size>
           <width>50</width>
           <height>20</height>
@@ -52,15 +70,40 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="label">
+       <widget class="QPushButton" name="resetParams_ui">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>20</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
-          <width>298</width>
-          <height>16777215</height>
+          <width>50</width>
+          <height>20</height>
          </size>
         </property>
         <property name="text">
-         <string>shot</string>
+         <string>reset</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>20</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>nfft</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -68,16 +111,16 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="shot">
+       <widget class="QLineEdit" name="nfft_ui">
         <property name="minimumSize">
          <size>
-          <width>80</width>
-          <height>0</height>
+          <width>50</width>
+          <height>15</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>100</width>
+          <width>50</width>
           <height>15</height>
          </size>
         </property>
@@ -86,11 +129,8 @@
           <pointsize>8</pointsize>
          </font>
         </property>
-        <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;shot number&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
         <property name="text">
-         <string>180816020</string>
+         <string>256</string>
         </property>
         <property name="placeholderText">
          <string extracomment="timeScale"/>
@@ -99,8 +139,20 @@
       </item>
       <item>
        <widget class="QLabel" name="label_2">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
         <property name="text">
-         <string>resampling</string>
+         <string>fs,kHz</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -108,16 +160,16 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="resampling">
+       <widget class="QLineEdit" name="fs_kHz_ui">
         <property name="minimumSize">
          <size>
-          <width>80</width>
-          <height>0</height>
+          <width>50</width>
+          <height>15</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>100</width>
+          <width>50</width>
           <height>15</height>
          </size>
         </property>
@@ -126,11 +178,8 @@
           <pointsize>8</pointsize>
          </font>
         </property>
-        <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;set &amp;quot;1&amp;quot; for no resampling&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
         <property name="text">
-         <string>1</string>
+         <string>1000</string>
         </property>
         <property name="placeholderText">
          <string extracomment="timeScale"/>
@@ -139,85 +188,104 @@
       </item>
       <item>
        <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>samplingRate_kHz</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="samplingRate_kHz">
         <property name="minimumSize">
          <size>
-          <width>80</width>
-          <height>0</height>
+          <width>50</width>
+          <height>15</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>100</width>
+          <width>20</width>
           <height>15</height>
          </size>
         </property>
         <property name="text">
-         <string>1000</string>
+         <string>window</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QCheckBox" name="SGFilt">
-        <property name="text">
-         <string>Filt</string>
+       <widget class="QLineEdit" name="window_ui">
+        <property name="minimumSize">
+         <size>
+          <width>80</width>
+          <height>15</height>
+         </size>
         </property>
-        <property name="tristate">
-         <bool>false</bool>
+        <property name="maximumSize">
+         <size>
+          <width>80</width>
+          <height>15</height>
+         </size>
         </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="subtrFilt">
+        <property name="font">
+         <font>
+          <pointsize>8</pointsize>
+         </font>
+        </property>
         <property name="text">
-         <string>subtrFilt</string>
+         <string>Tukey(0.25)</string>
+        </property>
+        <property name="placeholderText">
+         <string extracomment="timeScale"/>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>windowLength</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="winLength">
         <property name="minimumSize">
          <size>
           <width>50</width>
-          <height>0</height>
+          <height>15</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>80</width>
+          <width>20</width>
           <height>15</height>
          </size>
         </property>
-        <property name="toolTip">
-         <string>must be odd!</string>
+        <property name="text">
+         <string>nperseg</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="nperseg_ui">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>8</pointsize>
+         </font>
         </property>
         <property name="text">
-         <string>1001</string>
+         <string>256</string>
+        </property>
+        <property name="placeholderText">
+         <string extracomment="timeScale"/>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>polyOrder</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="polyOrder">
         <property name="minimumSize">
          <size>
           <width>50</width>
@@ -226,12 +294,189 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>80</width>
+          <width>20</width>
           <height>15</height>
          </size>
         </property>
         <property name="text">
-         <string>0</string>
+         <string>noverlap</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="noverlap_ui">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>8</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>32</string>
+        </property>
+        <property name="placeholderText">
+         <string extracomment="timeScale"/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_6">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>20</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>detrend</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="detrend_ui">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>8</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>constant</string>
+        </property>
+        <property name="placeholderText">
+         <string extracomment="timeScale"/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_7">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>20</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>scaling</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="scaling_ui">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>8</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>density</string>
+        </property>
+        <property name="placeholderText">
+         <string extracomment="timeScale"/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_8">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>20</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>mode</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="mode_ui">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>50</width>
+          <height>15</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>8</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>psd</string>
+        </property>
+        <property name="placeholderText">
+         <string extracomment="timeScale"/>
         </property>
        </widget>
       </item>
@@ -239,6 +484,15 @@
     </item>
     <item>
      <widget class="GraphicsLayoutWidget" name="spectrogram_UI">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>500</height>
+       </size>
+      </property>
       <property name="baseSize">
        <size>
         <width>0</width>
@@ -263,16 +517,9 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionOpen_mdsplus_QXT"/>
-    <addaction name="actionOpen_mdsplus_QOC"/>
-    <addaction name="actionDrawPlotsFromMdsplus"/>
-    <addaction name="actionExport_time_to_separate_file"/>
-    <addaction name="actionExport_to_csv"/>
+    <addaction name="actionGenerateTestData"/>
+    <addaction name="actionClearAll"/>
     <addaction name="separator"/>
-    <addaction name="actionOpen_csv"/>
-    <addaction name="actionDrawPlotsFromCsv"/>
-    <addaction name="separator"/>
-    <addaction name="actionClear"/>
     <addaction name="actionExit"/>
    </widget>
    <addaction name="menuFile"/>
@@ -282,9 +529,9 @@
     <string>Open_csv</string>
    </property>
   </action>
-  <action name="actionClear">
+  <action name="actionGenerateTestData">
    <property name="text">
-    <string>ClearPlots</string>
+    <string>generateTestData</string>
    </property>
   </action>
   <action name="actionExit">
@@ -325,6 +572,11 @@
   <action name="actionOpen_mdsplus_QOC">
    <property name="text">
     <string>Open_mdsplus_QOC</string>
+   </property>
+  </action>
+  <action name="actionClearAll">
+   <property name="text">
+    <string>ClearAll</string>
    </property>
   </action>
  </widget>
