--- a/spectrogramLayout.ui
+++ b/spectrogramLayout.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>992</width>
+    <width>1052</width>
     <height>587</height>
    </rect>
   </property>
@@ -15,18 +15,6 @@
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>0</width>
-    <height>400</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>16777215</width>
-    <height>587</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -86,6 +74,37 @@
         <property name="text">
          <string>reset</string>
         </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="scaleLinLogSqrt">
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>50</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <item>
+         <property name="text">
+          <string>linear</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>log10</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>sqrt</string>
+         </property>
+        </item>
        </widget>
       </item>
       <item>
@@ -228,7 +247,7 @@
          </font>
         </property>
         <property name="text">
-         <string>Tukey(0.25)</string>
+         <string>hamming</string>
         </property>
         <property name="placeholderText">
          <string extracomment="timeScale"/>
@@ -487,12 +506,6 @@
       <property name="enabled">
        <bool>true</bool>
       </property>
-      <property name="minimumSize">
-       <size>
-        <width>0</width>
-        <height>500</height>
-       </size>
-      </property>
       <property name="baseSize">
        <size>
         <width>0</width>
@@ -509,7 +522,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>992</width>
+     <width>1052</width>
      <height>21</height>
     </rect>
    </property>
@@ -584,7 +597,7 @@
   <customwidget>
    <class>GraphicsLayoutWidget</class>
    <extends>QGraphicsView</extends>
-   <header location="global">pyqtgraph</header>
+   <header>pyqtgraph</header>
   </customwidget>
  </customwidgets>
  <resources/>
