--- a/mainLayout.ui
+++ b/mainLayout.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1008</width>
+    <width>1022</width>
     <height>667</height>
    </rect>
   </property>
@@ -125,7 +125,7 @@
       <item>
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>resampling</string>
+         <string>MDSresampl</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -133,7 +133,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="resampling">
+       <widget class="QLineEdit" name="MDSresampling">
         <property name="minimumSize">
          <size>
           <width>80</width>
@@ -165,14 +165,14 @@
       <item>
        <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>samplingRate_kHz</string>
+         <string>NewSampling_kHz</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="samplingRate_kHz">
+       <widget class="QLineEdit" name="NewSamplingRate_kHz">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="minimumSize">
          <size>
@@ -187,7 +187,26 @@
          </size>
         </property>
         <property name="text">
-         <string>1000</string>
+         <string>500</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="resample_btn">
+        <property name="minimumSize">
+         <size>
+          <width>60</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>50</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>resample</string>
         </property>
        </widget>
       </item>
@@ -323,7 +342,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1008</width>
+     <width>1022</width>
      <height>21</height>
     </rect>
    </property>
