--- a/spectrogramLayout.ui
+++ b/spectrogramLayout.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1052</width>
+    <width>1108</width>
     <height>587</height>
    </rect>
   </property>
@@ -54,6 +54,25 @@
         </property>
         <property name="text">
          <string>draw</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="peaks_btn">
+        <property name="minimumSize">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>50</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>peaks</string>
         </property>
        </widget>
       </item>
@@ -522,7 +541,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1052</width>
+     <width>1108</width>
      <height>21</height>
     </rect>
    </property>
