--- a/GUIs/spectrogramLayout.ui
+++ b/GUIs/spectrogramLayout.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1108</width>
+    <width>1154</width>
     <height>587</height>
    </rect>
   </property>
@@ -521,17 +521,21 @@
      </layout>
     </item>
     <item>
-     <widget class="GraphicsLayoutWidget" name="spectrogram_UI">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="baseSize">
-       <size>
-        <width>0</width>
-        <height>0</height>
-       </size>
-      </property>
-     </widget>
+     <layout class="QHBoxLayout" name="horizontalLayout_spectr">
+      <item>
+       <widget class="GraphicsLayoutWidget" name="spectrogram_UI">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="baseSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
@@ -541,8 +545,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1108</width>
-     <height>21</height>
+     <width>1154</width>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
