--- a/GUIs/spectrogramSettingsLayout.ui
+++ b/GUIs/spectrogramSettingsLayout.ui
@@ -31,7 +31,7 @@
   <property name="windowTitle">
    <string>spectrogramSettings</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -521,6 +521,25 @@
       </property>
       <property name="text">
        <string>save</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QPushButton" name="setToUiAndClose_btn">
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>50</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>ok</string>
       </property>
      </widget>
     </item>
