--- a/GUIs/spectrogramSettingsLayout.ui
+++ b/GUIs/spectrogramSettingsLayout.ui
@@ -31,7 +31,7 @@
   <property name="windowTitle">
    <string>spectrogramSettings</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -1058,15 +1058,64 @@
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLabel" name="fs_kHz_ui">
-      <property name="frameShape">
-       <enum>QFrame::WinPanel</enum>
+     <widget class="QLineEdit" name="fs_kHz_ui">
+      <property name="minimumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
       </property>
-      <property name="frameShadow">
-       <enum>QFrame::Sunken</enum>
+      <property name="maximumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="palette">
+       <palette>
+        <active>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>170</red>
+            <green>170</green>
+            <blue>0</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </active>
+        <inactive>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>170</red>
+            <green>170</green>
+            <blue>0</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </inactive>
+        <disabled>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>240</red>
+            <green>240</green>
+            <blue>240</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </disabled>
+       </palette>
+      </property>
+      <property name="autoFillBackground">
+       <bool>false</bool>
       </property>
       <property name="text">
-       <string>1</string>
+       <string>50</string>
+      </property>
+      <property name="frame">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
