--- a/GUIs/spectrogramSettingsLayout.ui
+++ b/GUIs/spectrogramSettingsLayout.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>650</width>
-    <height>240</height>
+    <height>310</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>650</width>
-    <height>240</height>
+    <height>310</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>650</width>
-    <height>240</height>
+    <height>310</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -34,10 +34,10 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>20</x>
      <y>10</y>
      <width>644</width>
-     <height>223</height>
+     <height>293</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
@@ -63,7 +63,69 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="2">
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="fs_kHz_ui">
+      <property name="minimumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="palette">
+       <palette>
+        <active>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>170</red>
+            <green>170</green>
+            <blue>0</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </active>
+        <inactive>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>170</red>
+            <green>170</green>
+            <blue>0</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </inactive>
+        <disabled>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>240</red>
+            <green>240</green>
+            <blue>240</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </disabled>
+       </palette>
+      </property>
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
+      <property name="text">
+       <string>50</string>
+      </property>
+      <property name="frame">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label">
       <property name="minimumSize">
        <size>
@@ -112,7 +174,7 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="4">
+    <item row="0" column="4" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_4">
       <property name="minimumSize">
        <size>
@@ -259,7 +321,7 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="2">
+    <item row="1" column="2" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_6">
       <property name="minimumSize">
        <size>
@@ -308,7 +370,7 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="4">
+    <item row="1" column="4" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_7">
       <property name="minimumSize">
        <size>
@@ -454,7 +516,7 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="2">
+    <item row="3" column="2" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_10">
       <property name="minimumSize">
        <size>
@@ -503,7 +565,7 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="4">
+    <item row="3" column="4" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_11">
       <property name="minimumSize">
        <size>
@@ -661,7 +723,7 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="2" colspan="2">
+    <item row="5" column="2" colspan="2" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_14">
       <property name="minimumSize">
        <size>
@@ -689,7 +751,7 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="4" colspan="2">
+    <item row="5" column="4">
      <widget class="QLineEdit" name="targetFrq_kHz_ui">
       <property name="minimumSize">
        <size>
@@ -770,17 +832,17 @@
       </property>
      </widget>
     </item>
-    <item row="7" column="2">
+    <item row="7" column="2" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_17">
       <property name="minimumSize">
        <size>
-        <width>30</width>
+        <width>70</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>30</width>
+        <width>70</width>
         <height>15</height>
        </size>
       </property>
@@ -791,7 +853,7 @@
        </size>
       </property>
       <property name="text">
-       <string>min</string>
+       <string>min(*SxxMin)</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -828,17 +890,17 @@
       </property>
      </widget>
     </item>
-    <item row="7" column="4">
+    <item row="7" column="4" alignment="Qt::AlignRight">
      <widget class="QLabel" name="label_18">
       <property name="minimumSize">
        <size>
-        <width>30</width>
+        <width>70</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>30</width>
+        <width>70</width>
         <height>15</height>
        </size>
       </property>
@@ -849,7 +911,7 @@
        </size>
       </property>
       <property name="text">
-       <string>max</string>
+       <string>max(*SxxMax)</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -947,22 +1009,22 @@
       </property>
      </widget>
     </item>
-    <item row="11" column="0" alignment="Qt::AlignRight">
+    <item row="11" column="0">
      <widget class="QLabel" name="label_9">
       <property name="minimumSize">
        <size>
-        <width>50</width>
+        <width>130</width>
         <height>15</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>20</width>
+        <width>130</width>
         <height>15</height>
        </size>
       </property>
       <property name="text">
-       <string>type</string>
+       <string>spectrogram matrix type</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -1000,7 +1062,68 @@
       </item>
      </widget>
     </item>
-    <item row="11" column="5">
+    <item row="12" column="0" colspan="8">
+     <widget class="Line" name="line_6">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="13" column="0">
+     <widget class="QLabel" name="label_20">
+      <property name="minimumSize">
+       <size>
+        <width>130</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>130</width>
+        <height>15</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>export spectrogram to png</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="13" column="1">
+     <widget class="QCheckBox" name="exportSpectrogramToImg_ui">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+        <horstretch>60</horstretch>
+        <verstretch>20</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>60</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="tristate">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="14" column="0" colspan="8">
+     <widget class="Line" name="line_7">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="15" column="5">
      <widget class="QPushButton" name="getFromUiApplyAndClose_btn">
       <property name="minimumSize">
        <size>
@@ -1019,7 +1142,7 @@
       </property>
      </widget>
     </item>
-    <item row="11" column="6">
+    <item row="15" column="6">
      <widget class="QPushButton" name="saveSettings_btn">
       <property name="minimumSize">
        <size>
@@ -1038,7 +1161,7 @@
       </property>
      </widget>
     </item>
-    <item row="11" column="7">
+    <item row="15" column="7">
      <widget class="QPushButton" name="resetSetings_btn">
       <property name="minimumSize">
        <size>
@@ -1054,68 +1177,6 @@
       </property>
       <property name="text">
        <string>reset</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QLineEdit" name="fs_kHz_ui">
-      <property name="minimumSize">
-       <size>
-        <width>60</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>60</width>
-        <height>20</height>
-       </size>
-      </property>
-      <property name="palette">
-       <palette>
-        <active>
-         <colorrole role="Base">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>170</red>
-            <green>170</green>
-            <blue>0</blue>
-           </color>
-          </brush>
-         </colorrole>
-        </active>
-        <inactive>
-         <colorrole role="Base">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>170</red>
-            <green>170</green>
-            <blue>0</blue>
-           </color>
-          </brush>
-         </colorrole>
-        </inactive>
-        <disabled>
-         <colorrole role="Base">
-          <brush brushstyle="SolidPattern">
-           <color alpha="255">
-            <red>240</red>
-            <green>240</green>
-            <blue>240</blue>
-           </color>
-          </brush>
-         </colorrole>
-        </disabled>
-       </palette>
-      </property>
-      <property name="autoFillBackground">
-       <bool>false</bool>
-      </property>
-      <property name="text">
-       <string>50</string>
-      </property>
-      <property name="frame">
-       <bool>true</bool>
       </property>
      </widget>
     </item>
