Export of a spectrogram to image changed, pyqtgraph.exporters.ImageExporter replaced with QWidget.grab() option

--- a/GUIs/spectrogramSettingsLayout.ui
+++ b/GUIs/spectrogramSettingsLayout.ui
@@ -853,7 +853,7 @@
        </size>
       </property>
       <property name="text">
-       <string>min(*SxxMin)</string>
+       <string>min(*SxxMax)</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
