--- a/GUIs/w7xPyViewerSettingsLayout.ui
+++ b/GUIs/w7xPyViewerSettingsLayout.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>590</width>
+    <width>610</width>
     <height>230</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>590</width>
+    <width>610</width>
     <height>230</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>590</width>
+    <width>610</width>
     <height>230</height>
    </size>
   </property>
@@ -28,12 +28,12 @@
   <property name="locale">
    <locale language="English" country="Germany"/>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>568</width>
+     <width>588</width>
      <height>213</height>
     </rect>
    </property>
@@ -119,18 +119,18 @@
      <widget class="QLabel" name="label">
       <property name="minimumSize">
        <size>
-        <width>100</width>
+        <width>120</width>
         <height>15</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>90</width>
+        <width>120</width>
         <height>100</height>
        </size>
       </property>
       <property name="text">
-       <string>tree(qoc, qxt1)</string>
+       <string>tree(qoc, qxt1, qsr02)</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
